# BasePythonOtus

./: README.md
graduation_project/: click_house_test.py  django.db  pyproject.toml
graduation_project/clickhouse/: clickhouse_manager.py
graduation_project/clickhouse_app/: apps.py  models.py
graduation_project/clickhouse_driver/: __init__.py  click_house_test.py  common.py
graduation_project/django_config/: asgi.py  settings.py  urls.py  wsgi.py
homework_01/: main.py  phonebook copy.json  phonebook.json  phonebook.py
homework_02/: controller.py  model.py  phonebook.json
homework_03/: menu_content.py  view.py
homework_04/: requirements.txt
homework_05/: Dockerfile  app.py  common.py  database.json  main.py  requirements.txt  schemas.py  test.py  test_app.py
homework_05/database/: database.json  database.py
homework_05/modules/routers/: api.py  view.py
homework_05/routers/: api.py  view.py
homework_05/templates/: 404.html  about.html  api.html  base.html  index.html
homework_06/: README.md  TaskInfo.md  fetch_api.py  logger.py  main.py  pyproject.toml
homework_06/config/: config.py  urls.py
homework_06/models/: __init__.py  async_db.py  base.py  crud.py  models.py
homework_07/: .env  README.md  docker-compose.yml  pyproject.toml
homework_07/characters-app/: Dockerfile
homework_07/characters-app/blog_app/: admin.py  forms.py  models.py  urls.py  views.py
homework_07/characters-app/blog_app/management/commands/: generate_test_data.py
homework_07/characters-app/blog_app/migrations/: 0001_initial.py
homework_07/characters-app/blog_app/templates/blog_app/: author_detail.html  author_list.html  index.html
homework_07/characters-app/config/: settings.py
homework_07_HAHUY_NADO/: README.md  auth.ini  config.py  main.py  pyproject.toml
homework_07_HAHUY_NADO/models/: __init__.py  base.py  character.py  character_power.py  crud.py  lazy_migration.py  power.py  schemas.py
homework_07_HAHUY_NADO/routers/: api.py  view.py
homework_07_django/: Dockerfile  README.md  pyproject.toml
homework_07_django/blog_app/templates/blog_app/: add_post.html  base.html  navbar.html  post_detail.html  post_list.html
homework_07_django/config/: settings.py  urls.py
