[tool.poetry]
package-mode = false
name = "homework_06_async_db"
version = "0.1.0"
description = ""
authors = ["Evgeniy Chervinko <proleaveprod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12.0"
aiohttp = "^3.11.14"
sqlalchemy = ">=1.4"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"