[tool.poetry]
package-mode = false
name = "lesson_41_django_forms"
version = "0.1.0"
description = ""
authors = ["Evgeniy Chervinko <proleaveprod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12.0"
colorama = "^0.4.6"
django = "^5.1.7"
faker = "^37.0.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"