[tool.poetry]
package-mode = false
name = "homework_07_docker_compose"
version = "0.1.0"
description = ""
authors = ["Evgeniy Chervinko <proleaveprod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12.0"
sqlalchemy = ">=1.4"
psycopg = "^3.2.6"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
jinja2 = "^3.1.6"
psycopg-binary = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"